Correctly handle extended scancodes for RDP

Vinagre incorrectly handles extended RDP scancodes, which makes it
impossible to use some keys (e.g. both Super keys, right Alt, right
Control) in RDP sessions. When compiled against FreeRDP 1.0, the value
stored in frdp_event->extended is ignored, while an extended event's
flags should have the KDB_FLAGS_EXTENDED bit set. When compiled against
FreeRDP 1.1, the value returned by
freerdp_keyboard_get_rdp_scancode_from_x11_keycode() is incorrectly
stored verbatim into frdp_event->code as it contains both an extended
scancode indicator and the actual scancode.

https://bugzilla.gnome.org/show_bug.cgi?id=769025